--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-  "name": "esvalidate",
-  "version": "0.0.0",
+  "name": "esvalid",
+  "version": "0.0.1",
   "description": "confirm that a SpiderMonkey format AST represents an ECMAScript program",
   "main": "index",
   "scripts": {
     "test": "make lint test"
   },
+  "files": [
+    "index.js"
+  ],
   "repository": {
     "type": "git",
-    "url": "git@github.com:michaelficarra/esvalidate.git"
+    "url": "git@github.com:michaelficarra/esvalid.git"
   },
   "keywords": [
-    "esvalidate",
+    "esvalid",
     "ECMAScript",
     "ES262",
     "SpiderMonkey",
     "AST",
+    "validate",
     "validator",
     "valid"
   ],
   "author": "Michael Ficarra",
   "license": "3-Clause BSD",
   "bugs": {
-    "url": "https://github.com/michaelficarra/esvalidate/issues"
+    "url": "https://github.com/michaelficarra/esvalid/issues"
   },
-  "homepage": "https://github.com/michaelficarra/esvalidate",
+  "homepage": "https://github.com/michaelficarra/esvalid",
   "dependencies": {
     "esutils": "^1.0.0"
   },
