--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ node_js:
   - "0.9"
   - "0.10"
 before_install:
-  git submodule update --init
+  - "npm install npm -g"
+  - "git submodule update --init"
