--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "homepage": "https://github.com/michaelficarra/esvalid",
   "dependencies": {
-    "esutils": "^1.1.0"
+    "esutils": "^1.1.0",
+    "object-assign": "^0.3.1"
   },
   "devDependencies": {
     "async": "0.9.0",
