use standardised license name: BSD-3-Clause

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "valid"
   ],
   "author": "Michael Ficarra",
-  "license": "3-Clause BSD",
+  "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/michaelficarra/esvalid/issues"
   },
