--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "commander": "2.2.0",
     "eslint": "^0.6.2",
     "esprima": "^1.2.2",
+    "everything.js": "0.0.0",
     "express": "4.4.4",
     "istanbul": "^0.2.11",
     "lodash": "2.4.1",
