added state.ES6 option chack; bumped dependencies

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,6 @@
     "eqeqeq": [2, "smart"],
     "max-depth": [1, 4],
     "max-params": [1, 4],
-    "new-cap": 2,
     "new-parens": 0,
     "no-constant-condition": 1,
     "no-div-regex": 1,
@@ -22,10 +21,11 @@
     "no-use-before-define": 2,
     "quotes": [2, "double"],
     "radix": 2,
-    "space-after-keywords": [2, "always"],
-    "space-in-brackets": [2, "never"],
-    "space-unary-word-ops": 2,
-    "strict": 2,
+    "space-after-keywords": [0, "always"],
+    "object-curly-spacing": [2, "never"],
+    "array-bracket-spacing": [2, "never"],
+    "space-unary-ops": 2,
+    "strict": [2, "global"],
     "wrap-iife": 2
   }
 }
