--- a/package.json
+++ b/package.json
@@ -30,25 +30,25 @@
   },
   "homepage": "https://github.com/michaelficarra/esvalid",
   "dependencies": {
-    "esutils": "^1.1.4",
-    "object-assign": "^0.3.1"
+    "esutils": "^2.0.2",
+    "object-assign": "^4.0.1"
   },
   "devDependencies": {
-    "async": "0.9.0",
-    "coffee-script": "1.7.1",
-    "colors": "0.6.2",
-    "commander": "2.2.0",
-    "eslint": "^0.6.2",
-    "esprima": "^1.2.2",
-    "everything.js": "0.0.0",
-    "express": "4.4.4",
-    "istanbul": "^0.2.11",
-    "lodash": "2.4.1",
-    "mkdirp": "0.5.0",
-    "mocha": "^1.20.1",
+    "async": "1.4.2",
+    "coffee-script": "1.9.3",
+    "colors": "1.1.2",
+    "commander": "2.8.1",
+    "eslint": "1.2.1",
+    "esprima": "^2.5.0",
+    "everything.js": "1.0.3",
+    "express": "4.13.3",
+    "istanbul": "^0.3.18",
+    "lodash": "3.10.1",
+    "mkdirp": "0.5.1",
+    "mocha": "^2.2.5",
     "optimist": "0.6.1",
-    "request": "2.36.0",
-    "underscore": "1.6.0",
-    "xyz": "^0.4.0"
+    "request": "2.61.0",
+    "underscore": "1.8.3",
+    "xyz": "^0.5.0"
   }
 }
